# MLOps-CICD-Demo

./: README.md  main.py  pyproject.toml
.github/workflows/: cicd.yml
src/: main.py
tests/: test_main.py
