[project]
name = "mlops-cicd-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Rules: Pyflakes (F), pycodestyle (E, W), isort (I)
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = "src"
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=term-missing"]
